added HTML and CSS

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,72 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <section class="header">
+        <div class="head">
+          <div class="logoleft">
+          <img src="./images/logo3.png" alt="">
+          <h1>A R T</h1>
+          </div>
+         <div class="topnav">
+          <a href="#"><h5>Hello</h5></a>
+          <a href="#"><h5>About</h5></a>
+          <a href="#"><h5>News</h5></a>
+          <a href="#"><h5>Contact us</h5></a>
+          </div>
+        </div>
+      </section>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <section class="big-news">  
+      <div class="big-box-left">
+        <img src="./images/image1.jpg" alt="">
+        </div>
 
-    <section class="">
-      <!-- The other news  -->
+      <div class="big-box-right">
+        <div class="text">
+          <h2 class="rubrik"><b>// A R T </b> Magazine //</h2>
+          <p>A swedish magazine keeping track of everything happening in the art world. In our magazin you’ll find articles and interviews about the latest exhibitons, up comming artists and much more. Follow the link below to read the lastest published articles, interviews and reviews. Enjoy!
+          </p>
+          <a href="#"><h3>· All articles ·</h3></a>
+        </div>
+    </div>
+  </section>
+
+    <section class="other-news">
+      <div class="smal-box-1and4">    
+        <h4>I N S P I R A T I O N </h4>
+        <img src="./images/krumelur2.png" alt="">
+        <h2><b>VACATION OR STAYCATION? / </b> Explore the latest exhibitions in all of Sweden - from the north down to the south</h2>
+        <a href="#"><h3>· show article ·</h3></a>
+      </div>
+
+      <div class="smal-box-2">
+        <img src="./images/fotografiska.jpeg" alt="">
+        <h4>June 20, 2022</h4>
+        <h2><b>FOTOGRAFISKA / </b> review current exhibition - by Anna Glas</h2>
+        <a href="#"><h3>· show article ·</h3></a>
+      </div>
+      
+      <div class="smal-box-3">
+        <img src="./images/pensel..jpg" alt="">
+        <h4>June 20, 2022</h4>
+        <h2><b>LILJEVALCHS / </b> review current exhibition - by Anna Glas</h2>
+        <a href="#"><h3>· show article ·</h3></a>
+       </div>
+
+      <div class="smal-box-1and4">
+        <h4>N E W S </h4>
+        <img src="./images/hjarta2.png" alt="">
+        <h2><b>HAPPENINGS / </b> Read more about what's comming up autumn 22. Follow link below! </h2>
+        <a href="#"><h3>· read me ·</h3></a>
+       </div>
     </section>
   </body>
 </html>
