--- a/code/index.html
+++ b/code/index.html
@@ -1,74 +1,69 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scaled=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Project 1: The Rock Climbing News Site</title>
-    <link rel="stylesheet" href="./style.css" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Mukta:wght@300;400;700&display=swap');
     </style>
-        <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <nav class="navigation">
-      <div class="nav-container">
-        <div class="logo"><img src="/project-news-site/code/noun-mountain-4212086.png" alt="logo" style="width: 100px;height:100px"></div>
+</head>
+<body>
+  <nav class="nav-container" style="width: 667px; height:auto">
+    <div class="logo"><img src="mountain-logo.png" alt="logo" style="width: 100px; height:100px"></div>
         <!--<div class="slogan"><p>The one to read</p></div>-->
-        <ul class="nav-items main-nav mobile-hide">
-          <li class="list-item"><a href="#">Home</a></li>
-          <li class="list-item"><a href="#">Articles</a></li>
-          <li class="list-item"><a href="#">Inspiration</a></li>
-          <li class="list-item"><a href="#">Videos</a></li>
-        </ul>
-      </div>
-    </nav>
+    <ul class="nav-items main-nav mobile-hide">
+      <li class="list-item"><a href="#">Home</a></li>
+      <li class="list-item"><a href="#">Articles</a></li>
+      <li class="list-item"><a href="#">Inspiration</a></li>
+      <li class="list-item"><a href="#">Videos</a></li>
+    </ul>
+    </div>
+  </nav>
     
-    <section class="quotes-slide">
-      <div class="quote"> <!--Maybe they can slide?-->
-        <h3>“If my mind can conceive it and my heart can believe it, then I can achieve it.”</h3>
-      </div>
-    </section>
+  <section class="quotes-slide" style="width: 667px; height:auto">
+    <div class="slide-content"> <!--Maybe they can slide?-->
+      <h3>“If my mind can conceive it<br>and my heart can believe it,<br> then I can achieve it.”</h3>
+    </div>
+  </section>
     
-    <section class="big-news">
-      <div class="container">
-        <div class="featured-container">
-          <div class="main-article">
-            <h1>Featured this week</h1>
-            <img src="/project-news-site/code/pexels-tobias-aeppli-1609512.jpg" alt="featured image" style="width: 667px;height:auto">
-            <video width="667px" height="auto" autoplay loop>
-              <source src="/project-news-site/code/boy-climbing-up-a-rocky-mountain.mp4" type="video/mp4">
-            </video>
-            <p>Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
-          </div>
-        </div>
-      </div>  
-    </section>    
+  <section class="big-news" style="width: 667px; height:auto">
+    <div class="featured-container">
+      <div class="main-article">
+        <h1>Featured this week</h1>
+        <video width="667px" height="auto" autoplay loop>
+          <source src="boy-climbing2.mp4">
+        </video>
+          <p>Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+      </div>
+    </div>  
+  </section>    
 
-    <section class="other-news">
-        <div class="sub-container">
-          <div class="sub-featured">
-            <div class="sub1">
-              <h3>text</h3>
-              <img src="/project-news-site/code/pexels-nans-3381105.jpg" alt="img1" style="width: 667px;height:auto">
-            </div>
-            <div class="sub2">
-              <h3>text</h3>
-              <img src="/project-news-site/code/pexels-stefan-stefancik-91224.jpg" alt="img2" style="width: 667px;height:auto">
-            </div>
-            <div class="sub3">
-              <h3>text</h3>
-              <img src="/project-news-site/code/pexels-zak-bentley-2924738.jpg" alt="img3" style="width: 667px;height:auto">
-            </div>
-            <div class="sub4">
-              <h3>text</h3>
-              <img src="/project-news-site/code/pexels-pixabay-53213.jpg" alt="img4" style="width: 667px;height:auto">
-            </div>
-          </div>
+  <section class="other-news">
+    <div class="sub-container">
+      <div class="sub-featured">
+        <div class="sub1">
+          <h3>text</h3>
+          <img src="hiking.jpg" alt="img1" style="width: 667px; height:auto">
         </div>
-      </section>
-  </body>
+        <div class="sub2">
+          <h3>text</h3>
+          <img src="hanging.jpg" alt="img2" style="width: 667px; height:auto">
+        </div>
+        <div class="sub3">
+          <h3>text</h3>
+          <img src="snow.jpg" alt="img3" style="width: 667px; height:auto">
+        </div>
+        <div class="sub4">
+          <h3>text</h3>
+          <img src="hand.jpg" alt="img4" style="width: 667px; height:auto">
+        </div>
+      </div>
+    </div>
+  </section>
+</body>
 </html>
 
 
