--- a/code/index.html
+++ b/code/index.html
@@ -7,8 +7,13 @@
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
+    <header class="site-header">
+      <div class="logo">
+        <img src="Biker_Two Color.png" alt="Logo">
+      </div>
+      <div class="navbar">
+        <button>Navigate</button>
+      </div>
     </header>
 
     <section class="big-news">
