added final css and html

--- a/code/index.html
+++ b/code/index.html
@@ -15,12 +15,16 @@
           <img src="./images/logo3.png" alt="">
           <h1>A R T</h1>
           </div>
+
          <div class="topnav">
+          <button class="dropbtn"><img src="./images/Burger.png" alt=""></button>
+           <div class="dropdown-content">
           <a href="#"><h5>Hello</h5></a>
           <a href="#"><h5>About</h5></a>
           <a href="#"><h5>News</h5></a>
           <a href="#"><h5>Contact us</h5></a>
-          </div>
+          </div> 
+         </div>
         </div>
       </section>
     </header>
@@ -45,7 +49,7 @@
         <h4>I N S P I R A T I O N </h4>
         <img src="./images/krumelur2.png" alt="">
         <h2><b>VACATION OR STAYCATION? / </b> Explore the latest exhibitions in all of Sweden - from the north down to the south</h2>
-        <a href="#"><h3>· show article ·</h3></a>
+            <a href="#"><h3>· read me ·</h3></a>
       </div>
 
       <div class="smal-box-2">
