changes 19th of July

--- a/code/index.html
+++ b/code/index.html
@@ -4,20 +4,29 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header class="site-header">
       <div class="logo">
         <img src="Biker_Two Color.png" alt="Logo">
+        <h1>Just roll with it</h1>
       </div>
       <div class="navbar">
-        <button>Navigate</button>
+        <img class="nav-button" src="icons8-menu-24.png" alt="Navigate">
       </div>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
+    <section class="big-news-grid">
+      <div class="big-news-item picture-big-news-item">
+        <img src="Tour de France.jpg" alt="Tour de France">
+      </div>
+      <div class="big-news-item h1-big-news-item">
+        <h1>All about Denmark</h1>
+      </div>
+      <div class="big-news-item text-big-news-item">
+        <p>For the first time ever, Tour de France started in Denmark. <br> <a href=""> Read more</a></p>
+      </div>
     </section>
 
     <section class="">
