--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
@@ -134,7 +134,6 @@
         <h2> <a href="https://forestsnews.cifor.org/78046/collective-payments-for-ecosystem-services-a-promising-policy-tool-to-reduce-deforestation?fnl=en" target="_blank">Collective payments for ecosystem services: a promising policy tool to reduce deforestation?</a></h2>
         <p>Payments for Ecosystem Services (PES) programmes are often used as a tool to reduce deforestation and forest degradation in tropical countries.Such programmes offer monetary or in-kind payments to individual landowners or forest users who voluntarily reduce deforestation or increase their forest-conservation activities, thereby, increasing the forest’s ecosystem services.</p>
         
-    
     </div>
 
 </section>
