--- a/code/index.html
+++ b/code/index.html
@@ -15,16 +15,18 @@
       <div class="grid-parent">
         <div class="grid-item big-item">
           <div class="logo-container">
-            <img class="logo" src="logo.svg" />
+            <img class="logo" src="logo.svg"/>
           </div>
           <div class="top-heading">
           Bambino
         </div></div>
-        <div class="grid-item navbar"><nav class="nav">
-          <a class="nav-item" href="path/to/subpage">News </a>
-          <a class="nav-item" href="path/to/subpage"> Contact us </a>
-          <a class="nav-item" href="path/to/subpage"> Open positions </a>
-        </nav></div>
+        <div class="grid-item navbar">
+        <nav class="nav">
+        <a class="nav-item" href="path/to/subpage">News </a>
+        <a class="nav-item" href="path/to/subpage"> Contact us </a>
+        <a class="nav-item" href="path/to/subpage"> Open positions </a>
+        </nav>
+        </div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
