worked with footer and grid

--- a/code/project-news-site/code/index.html
+++ b/code/project-news-site/code/index.html
@@ -60,14 +60,42 @@
           </p>  
         </article>
       </div>
-      <!-- <div class="other item4">
+      <div class="divider line"><h3></h3></div>
+      <div class="other item4">
         <img src="/images-videos/snow.jpg" alt="people walking">
         <article class="other-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
         </article>
-      </div> -->
+      </div>
+      <div class="divider line"><h3></h3></div>
+      <div class="other item5">
+        <img src="/images-videos/rope.jpg" alt="rope">
+        <article class="other-article">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
+        </article>
+      </div>
+      <div class="divider line"><h3></h3></div>
+      <div class="other item6">
+        <img src="/images-videos/kid-climbing.jpg" alt="kid climbing">
+        <article class="other-article">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
+        </article>
+      </div>
     </section>
     <aside class="aside aside-1">Aside 1</aside>
     <aside class="aside aside-2">Aside 2</aside>
-    <footer class="footer">Footer</footer>
+    <div class="divider line"><h3></h3></div>
+    <footer class="footer">
+      <div class="grid-footer-container">
+        <div class="flex-footer-container">
+          <div class="flex-footer-child-info1">
+            <p1>This is a link</p1>
+            <p2>This is a link</p2>
+            <p3>This is a link</p3>
+          </div>
+        </div>
+      </div>
+    </footer>
   </div>
+</body>
+</html> 
