worked in desktop size

--- a/code/project-news-site/code/index.html
+++ b/code/project-news-site/code/index.html
@@ -38,14 +38,14 @@
     <div class="divider"><h3>Get inspired</h3></div>
     <section class="other-news">
       <div class="other item1">
-        <img src="/images-videos/horizon.jpg" alt="man landscape">
+        <img class="pics"  src="/images-videos/horizon.jpg" alt="man landscape">
         <article class="other-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
         </article>
       </div>
       <div class="divider line"><h3></h3></div>
       <div class="other item2">
-        <img src="/images-videos/hiking.jpg" alt="people walking">
+        <img class="pics" src="/images-videos/hiking.jpg" alt="people walking">
         <article class="other-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
@@ -53,7 +53,7 @@
       </div>
       <div class="divider line"><h3></h3></div>
       <div class="other item3">
-        <img src="/images-videos/hand.jpg" alt="people walking">
+        <img class="pics" src="/images-videos/hand.jpg" alt="people walking">
         <article class="other-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -62,36 +62,51 @@
       </div>
       <div class="divider line"><h3></h3></div>
       <div class="other item4">
-        <img src="/images-videos/snow.jpg" alt="people walking">
+        <img class="pics" src="/images-videos/snow.jpg" alt="snow mountain">
         <article class="other-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
         </article>
       </div>
       <div class="divider line"><h3></h3></div>
       <div class="other item5">
-        <img src="/images-videos/rope.jpg" alt="rope">
+        <img class="pics" src="/images-videos/rope.jpg" alt="rope">
         <article class="other-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
         </article>
       </div>
       <div class="divider line"><h3></h3></div>
       <div class="other item6">
-        <img src="/images-videos/kid-climbing.jpg" alt="kid climbing">
+        <img class="pics" src="/images-videos/kid-climbing.jpg" alt="kid climbing">
+        <article class="other-article">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
+        </article>
+      </div>
+      <div class="other item7">
+        <img class="pics" src="/images-videos/hanging.jpg" alt="climber hanging">
+        <article class="other-article">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
+        </article>
+      </div>
+      <div class="other item8">
+        <img class="pics" src="/images-videos/pexels-min-an-1543756.jpg" alt="rapel">
         <article class="other-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
         </article>
       </div>
     </section>
-    <aside class="aside aside-1">Aside 1</aside>
-    <aside class="aside aside-2">Aside 2</aside>
     <div class="divider line"><h3></h3></div>
     <footer class="footer">
       <div class="grid-footer-container">
         <div class="flex-footer-container">
-          <div class="flex-footer-child-info1">
-            <p1>This is a link</p1>
-            <p2>This is a link</p2>
-            <p3>This is a link</p3>
+          <div class="flex-footer-child info1">
+            <p1>info</p1>
+            <p2>info</p2>
+            <p3>info</p3>
+          </div>
+          <div class="flex-footer-child info2">
+            <p1>First project: July 2022</p1>
+            <p2>dballesterfont@gmail.com</p2>
+            <p3>Pictures and media: Mixkit and Pexels </p3>
           </div>
         </div>
       </div>
