more link fixing

--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;400;700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 <body>
   <div class="wrapper">
     <header class="header">
-      <img class="logo" src="/images-videos/logo.png" alt="logo">
+      <img class="logo" src="./images-videos/logo.png" alt="logo">
       <h5 class="magazine-name">nine c plus</h5>
       <ul class="menu">
         <li><a href="#">Home</a></li>
@@ -29,7 +29,7 @@
     <div class="divider"><h3>Featured News</h3></div>
     <section class="featured-news">
       <div class="featured1">
-        <video src="/images-videos/boy-climbing2.mp4" autoplay loop></video>
+        <video src="./images-videos/boy-climbing2.mp4" autoplay loop></video>
         <article class="featured-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
         </article>
@@ -38,14 +38,14 @@
     <div class="divider"><h3>Get inspired</h3></div>
     <section class="other-news">
       <div class="other item1">
-        <img class="pics"  src="/images-videos/horizon.jpg" alt="man landscape">
+        <img class="pics"  src="./images-videos/horizon.jpg" alt="man landscape">
         <article class="other-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
         </article>
       </div>
       <div class="divider line"><h3></h3></div>
       <div class="other item2">
-        <img class="pics" src="/images-videos/hiking.jpg" alt="people walking">
+        <img class="pics" src="./images-videos/hiking.jpg" alt="people walking">
         <article class="other-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
@@ -53,7 +53,7 @@
       </div>
       <div class="divider line"><h3></h3></div>
       <div class="other item3">
-        <img class="pics" src="/images-videos/hand.jpg" alt="people walking">
+        <img class="pics" src="./images-videos/hand.jpg" alt="people walking">
         <article class="other-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -62,33 +62,33 @@
       </div>
       <div class="divider line"><h3></h3></div>
       <div class="other item4">
-        <img class="pics" src="/images-videos/snow.jpg" alt="snow mountain">
+        <img class="pics" src="./images-videos/snow.jpg" alt="snow mountain">
         <article class="other-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
         </article>
       </div>
       <div class="divider line"><h3></h3></div>
       <div class="other item5">
-        <img class="pics" src="/images-videos/rope.jpg" alt="rope">
+        <img class="pics" src="./images-videos/rope.jpg" alt="rope">
         <article class="other-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
         </article>
       </div>
       <div class="divider line"><h3></h3></div>
       <div class="other item6">
-        <img class="pics" src="/images-videos/kid-climbing.jpg" alt="kid climbing">
+        <img class="pics" src="./images-videos/kid-climbing.jpg" alt="kid climbing">
         <article class="other-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
         </article>
       </div>
       <div class="other item7">
-        <img class="pics" src="/images-videos/hanging.jpg" alt="climber hanging">
+        <img class="pics" src="./images-videos/hanging.jpg" alt="climber hanging">
         <article class="other-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
         </article>
       </div>
       <div class="other item8">
-        <img class="pics" src="/images-videos/pexels-min-an-1543756.jpg" alt="rapel">
+        <img class="pics" src="./images-videos/pexels-min-an-1543756.jpg" alt="rapel">
         <article class="other-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
         </article>
@@ -105,7 +105,7 @@
           </div>
           <div class="flex-footer-child info2">
             <p1>First project: July 2022</p1>
-            <p2>dballesterfont@gmail.com</p2>
+            <a href="mailto:dballesterfont@gmail.com"><p2>Send me an email</p2></a>
             <p3>Pictures and media: Mixkit and Pexels </p3>
           </div>
         </div>
