--- a/code/index.html
+++ b/code/index.html
@@ -2,22 +2,74 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Greece: Islands</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Oswald|Noto+Sans"
+    />
     <header>
-      <h1>Test</h1>
-      <!-- Some kind of logo and navbar -->
+      <link
+        href="https://fonts.googleapis.com/css2?family=Megrim&family=Monoton&family=Raleway:wght@100&display=swap"
+        rel="stylesheet"
+      />
+      <div class="top-heading">
+        <img src="./images/paper-plane.png" alt="logo" />
+        <h1>Greece</h1>
+        <h2>Home</h2>
+        <h2>Info</h2>
+        <h2>Contact</h2>
+      </div>
     </header>
-
     <section class="big-news">
-      <!-- The big news content -->
+      <!-- The big news  -->
     </section>
-
-    <section class="">
-      <!-- The other news  -->
+    <section class="island-info">
+      <div class="islands santorini">
+        <img src="./images/Santorini.jpg" alt="Santorini" />
+        <h3>Santorini</h3>
+        <p>
+          Santorini är en grekisk ögrupp i Egeiska havet, som utgör den södra
+          delen av ögruppen och prefekturen Kykladerna, cirka 18 km söder om Ios
+          och 110 km norr om Kreta. Öarnas yta är cirka 72 km² och, befolkningen
+          uppgick till ungefär 13 600 personer år 2001. Santorini är ett av
+          Greklands främsta turistmål.
+        </p>
+      </div>
+      <div class="islands mykonos">
+        <img src="./images/Mykonos.jpg" alt="Mykonos" />
+        <p>
+          Santorini är en grekisk ögrupp i Egeiska havet, som utgör den södra
+          delen av ögruppen och prefekturen Kykladerna, cirka 18 km söder om Ios
+          och 110 km norr om Kreta. Öarnas yta är cirka 72 km² och, befolkningen
+          uppgick till ungefär 13 600 personer år 2001. Santorini är ett av
+          Greklands främsta turistmål.
+        </p>
+      </div>
+      <div class="islands zakynthos">
+        <img src="./images/Zakynthos.jpg" alt="Zakynthos" />
+        <p>
+          Santorini är en grekisk ögrupp i Egeiska havet, som utgör den södra
+          delen av ögruppen och prefekturen Kykladerna, cirka 18 km söder om Ios
+          och 110 km norr om Kreta. Öarnas yta är cirka 72 km² och, befolkningen
+          uppgick till ungefär 13 600 personer år 2001. Santorini är ett av
+          Greklands främsta turistmål.
+        </p>
+      </div>
+      <div class="islands naxos">
+        <img src="./images/Naxos.jpg" alt="Naxos" />
+        <p>
+          Santorini är en grekisk ögrupp i Egeiska havet, som utgör den södra
+          delen av ögruppen och prefekturen Kykladerna, cirka 18 km söder om Ios
+          och 110 km norr om Kreta. Öarnas yta är cirka 72 km² och, befolkningen
+          uppgick till ungefär 13 600 personer år 2001. Santorini är ett av
+          Greklands främsta turistmål.
+        </p>
+      </div>
     </section>
   </body>
 </html>
