added some hovers

--- a/code/index.html
+++ b/code/index.html
@@ -14,8 +14,10 @@
 <body>
   <div class="wrapper">
     <header class="header">
-      <img class="logo" src="./images-videos/logo.png" alt="logo">
-      <h5 class="magazine-name">nine c plus</h5>
+      <div class="logo-container">
+        <img class="logo" src="./images-videos/logo.png" alt="logo">
+          <h5 class="magazine-name">nine c plus</h5>
+      </div>
       <ul class="menu">
         <li><a href="#">Home</a></li>
         <li><a href="#">Articles</a></li>
@@ -81,12 +83,14 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
         </article>
       </div>
+      <div class="divider line"><h3></h3></div>
       <div class="other item7">
         <img class="pics" src="./images-videos/hanging.jpg" alt="climber hanging">
         <article class="other-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
         </article>
       </div>
+      <div class="divider line"><h3></h3></div>
       <div class="other item8">
         <img class="pics" src="./images-videos/pexels-min-an-1543756.jpg" alt="rapel">
         <article class="other-article">
@@ -94,14 +98,13 @@
         </article>
       </div>
     </section>
-    <div class="divider line"><h3></h3></div>
     <footer class="footer">
       <div class="grid-footer-container">
         <div class="flex-footer-container">
           <div class="flex-footer-child info1">
-            <p1>info</p1>
-            <p2>info</p2>
-            <p3>info</p3>
+            <p1></p1>
+            <p2></p2>
+            <p3></p3>
           </div>
           <div class="flex-footer-child info2">
             <p1>First project: July 2022</p1>
